# llm-blanket

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-pypi.yml
examples/: README.md  config_and_url_override.py  quickstart.py  streaming.py
src/llm_blanket/: __init__.py  base.py  config.py  factory.py  registry.py
src/llm_blanket/providers/: __init__.py  anthropic_.py  gemini_.py  openai_compatible.py
